pagination alignment issue fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -140,6 +140,10 @@ p{
   
   
 }
+.esp-sub-header{
+  height: 61px;
+}
+
 .esp-sub-header button i{
       line-height: 0;
   position: relative;
